2014-12-20  Ben Finney  <ben+python@benfinney.id.au>

    * Remove custom test suite creation, we now use ‘unittest2’.
    * Discriminate Python 2-and-3 compatible usage of dict methods.
    * Declare explicit absolute and relative imports.

2014-12-17  Ben Finney  <ben+python@benfinney.id.au>

    * Discriminate between different ‘fileno’ method behaviours.
      In Python 3, ‘StringIO.fileno’ is callable but raises an exception.

2014-12-16  Ben Finney  <ben+python@benfinney.id.au>

    * Wrap standard library imports where names changed in Python 3.

2014-12-16  Ben Finney  <ben+python@benfinney.id.au>

    * Declare support explicitly for Python 2 only.
    * Migrate to JSON (instead of Python) for serialised version info.

2014-12-15  Ben Finney  <ben+python@benfinney.id.au>

    * Wrap the ‘fromlist’ parameter of ‘__import__’ for Python 3
      compatibility.
    * Migrate to JSON (instead of Python) for serialised version info.

2014-12-12  Ben Finney  <ben+python@benfinney.id.au>

    * Document the security impact of the default umask.

2014-12-11  Ben Finney  <ben+debian@benfinney.id.au>

    * Include test suite with source distribution.

2014-12-08  Ben Finney  <ben+python@benfinney.id.au>

    * Migrate to ‘mock’ library for mock objects in tests.
      This will ease the port to Python 3, which has ‘mock’ in the
      standard library.
    * Migrate to ‘testscenarios’ library for unit test scenarios.
    * Migrate to ‘unittest2’ library for back-ported improvements.

2014-11-28  Ben Finney  <ben+python@benfinney.id.au>

    * Add a hacking guide for developers.

2014-11-27  Ben Finney  <ben+python@benfinney.id.au>

    * Use ‘pydoc.splitdoc’ to get package description text.
    * Remove ASCII translation of package description, not needed now the
      docstring is a proper Unicode text value.
    * Move package metadata to ‘daemon/_metadata.py’.
    * Move version string to a plain-text data file, ‘VERSION’.